kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-reminder-service
  namespace: development
  resourceVersion: '1.0.0'
  labels:
    app: dev-reminder-service
spec:
  selector:
    matchLabels:
      app: dev-reminder-service
  replicas: 1
  template:
    metadata:
      labels:
        app: dev-reminder-service
    spec:
      containers:
        - name: dev-reminder-service
          image: adisakshya/reminder-service:1.0.0-dev
          ports:
            - containerPort: 80
